# Data-Oriented-SDL-Engine

./: CMakeLists.txt  DebugUtility.h  README.md  SimpleButtonEventHandler.h  SnakeEntity.h
ComponentTests/: ComponentAllocatorTests.cpp  ComponentCollectionRepositoryTests.cpp  ComponentPoolTests.cpp  ComponentRepositoryTests.cpp  ComponentTests.vcxproj  ComponentTests.vcxproj.filters  DataBlockTreeTests.cpp  EventTests.cpp  GraphicsTests.cpp  MathUtilTests.cpp  MemoryPoolTests.cpp  PerformanceTests.cpp  PhysicsTest.cpp  SDLEventTests.cpp  TestPhysics.cpp  VectorTests.cpp  stdafx.cpp
ComponentTests/Debug/: vc120.idb
ComponentTests/Debug/ComponentTests.tlog/: CL.read.1.tlog  CL.write.1.tlog  ComponentTests.lastbuildstate  ComponentTests.write.1u.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ComponentTests/Release/ComponentTests.tlog/: CL.read.1.tlog  CL.write.1.tlog  (+2 more)
GoogleTestComponents/: ComponentCollectionIteratorTests.cpp  ComponentCollectionRepositoryTests.cpp  ComponentCollectionTests.cpp  ComponentContainerTests.cpp  ComponentRepositoryTests.cpp  EventTests.cpp  GraphicsTests.cpp  MathUtilTests.cpp  PerformanceTests.cpp  PhysicsTest.cpp  SDLEventTests.cpp  SerializationTests.cpp  VectorTests.cpp  XmlTest.cpp  stdafx.cpp
Headers/: BaseComponent.h  CircleGraphicsResource.h  CollisionSystem.h  ComponentAllocator.h  ComponentCollection.h  ComponentCollectionRepository.h  ComponentPool.h  ComponentRepository.h  ComponentSpec.h  ComponentType.h  DataBlock.h  DataBlockTree.h  Entity.h  EntityConstructor.h  EntityList.h  EntityTransform.h  EventType.h  GameApp.h  GameEntityConstructor.h  Graphics.h  GraphicsComponent.h  GraphicsResource.h  GraphicsUtility.h  IAction.h  IComponent.h  IEntityTransform.h  IEvent.h  IGraphicsResource.h  IMessage.h  LinkVector.h  MemoryPool.h  Physics.h  PlayerActions.h  PlayerMoveTransform.h  RectGraphicsResource.h  Resources.h  SimpleProjectileActions.h  SpriteGraphicsResource.h  TransformComponent.h  TriangleGraphicsResource.h  (+3 more)
Headers/Actions/: AsteroidAction.h  BackgroundStarsAction.h  IAction.h  PlayerSpaceshipAction.h  SimpleButtonAction.h  SpaceGameAction.h  SpaceGameStateAction.h
Headers/CameraTest/: CameraTestApp.h  CameraTestStage.h
Headers/Components/: AISimpleGoalComponent.h  BaseComponent.h  ClickableComponent.h  CollisionComponent.h  Component.h  ComponentCollection.h  ComponentCollectionRepository.h  ComponentRelation.h  ComponentRepository.h  GraphicsComponent.h  IntersectionComponent.h  PhysicsComponent.h  SimpleButtonComponent.h  SimplePhysicsComponent.h  SimpleStateComponent.h  TransformComponent.h  VectorContainer.h  VelocityComponent.h
Headers/Events/: ButtonEventArgs.h  ClickEventHandler.h  CollisionEvent.h  CollisionEventArgs.h  Event.h  EventHandler.h  EventInfo.h  EventMap.h  EventObserveable.h  EventType.h  EventTypes.h  Events.h  ExitBoundsEventArgs.h  IComponentProcess.h  IEventArgs.h  IEventHandler.h  ITaskEvent.h  ITransform.h  IntersectionEventArgs.h  MouseButtonEventArgs.h  MouseEventHandler.h  MouseMotionEventArgs.h  MouseOverEventArgs.h  QuitApplicationEventArgs.h  SDLEventCollector.h  SimpleButtonClickEventHandler.h  SimpleButtonEventHandler.h  TaskEvent.h
Headers/Game/: GameStateLoader.h  IGameApp.h  IStage.h  ParseContext.h  Parser.h
Headers/Graphics/: BubbleGraphicsResources.h  Camera.h  CircleFIllGraphicsResource.h  CircleOutlineGraphicsResource.h  Color.h  EnemyTriangleGraphicsResource.h  Graphics.h  GraphicsUtility.h  GridGraphicsResource.h  IGraphicsResource.h  ITransform.h  MouseCameraTransform.h  ProceduralAsteroidGraphicsResource.h  RectGraphicsResource.h  SimpleStatusBarGraphicResource.h  SpriteGraphicsResource.h  StarGraphicsResource.h  TextGraphicsResource.h  TriangleGraphicsResource.h
Headers/GraphicsResources/: BubbleGraphicsResources.h  CircleFIllGraphicsResource.h  CircleGraphicsResource.h  CircleOutlineGraphicsResource.h  EnemyTriangleGraphicsResource.h  IGraphicsResource.h  ProceduralAsteroidGraphicsResource.h  RectGraphicsResource.h  SpriteGraphicsResource.h  StarGraphicsResource.h  TextGraphicsResource.h  TriangleGraphicsResource.h
Headers/Physics/: CollisionPhysicsTask.h  ExitBoundsTask.h  IPhysicsTask.h  IntersectionTask.h  Physics.h  VelocityTask.h
Headers/SnakeGame/: FoodAction.h  SnakeAction.h  SnakeEatFoodTask.h  SnakeEatSelfTask.h  SnakeGameApp.h  SnakeGameMenuStage.h  SnakeGameStage.h
Headers/SpaceGame/: AsteroidAction.h  BackgroundStarsAction.h  PlayerSpaceshipAction.h  SpaceGameAction.h  SpaceGameApp.h  SpaceGameEntityConstructor.h  SpaceGameMenuStage.h  SpaceGameStage.h  SpaceGameStateAction.h
Headers/Transforms/: CollisionTransform.h  IEntityTransform.h  PlayerMoveTransform.h
Headers/Utility/: DebugUtility.h  FileUtility.h  LogUtility.h  MathUtility.h  ProcessUtility.h  SerialUtility.h  SpatialHashTable.h  TypeUtility.h  Vector.h
Resources/: test1.xml
Resources/xml/: transformComponent.xml
Source/: ComponentCollection.cpp  ComponentSpec.cpp  Entity.cpp  GameApp.cpp  Graphics.cpp  IComponent.cpp  IMessage.cpp  MathUtility.h  Physics.cpp  Resources.cpp  SDLEventCollector.cpp  SnakeAction.cpp  SpaceGameApp.cpp  XmlDocument.cpp  main.cpp
Source/Components/: ComponentCollection.cpp  ComponentContainerFactory.cpp  ComponentRepository.cpp
Source/Events/: SDLEventCollector.cpp
Source/Graphics/: BubbleGraphicsResource.cpp  Camera.cpp  Graphics.cpp  RectGraphicsResource.cpp
Source/Physics/: Physics.cpp
Source/SnakeGame/: SnakeAction.cpp  SnakeGameApp.cpp  SnakeGameMenuStage.cpp  SnakeGameStage.cpp
Source/SpaceGame/: PlayerSpaceshipAction.cpp  SpaceGameApp.cpp  SpaceGameMenuStage.cpp
Source/Utility/: SerialUtility.cpp
TestClasses/: TestComponentRelation.h  TestComponentRepository.h  TestDependentComponent.h  TestEvents.h  TestEventsSystem.h  TestGraphics.cpp  TestGraphics.h
Win/: SimpleComponents.sln  SimpleComponents.vcxproj  SimpleComponents.vcxproj.filters
Win/SimpleComponentsTest/: SimpleComponentsTest.vcxproj  SimpleComponentsTest.vcxproj.filters  SpatialHashTest.cpp
cmake/: FindSDL2.cmake
(+28 files in other folders)
