cmake_minimum_required(VERSION 3.3)
cmake_minimum_required(VERSION 3.1)
project(SDLRTS)
include_directories("/Library/Frameworks/")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -F/Library/Frameworks/ -framework SDL2 -framework SDL2_image")
set(SOURCE_FILES Source/main.cpp Source/GameApp.cpp Source/Graphics.cpp TestClasses/TestGraphics.cpp TestClasses/TestGraphics.h TestClasses/TestGraphics.cpp TestClasses/TestGraphics.h Headers/IGraphicsResource.h Source/Resources.cpp Headers/Resources.h Headers/TriangleGraphicsResource.h Headers/RectGraphicsResource.h Headers/CircleGraphicsResource.h Headers/SpriteGraphicsResource.h Headers/ComponentType.h Headers/IEvent.h Headers/EventType.h Headers/PlayerMoveTransform.h Headers/ComponentSpec.h Source/ComponentSpec.cpp.cpp)
add_executable(SDLRTS ${SOURCE_FILES} TestClasses/TestGraphics.cpp TestClasses/TestGraphics.h Headers/IGraphicsResource.h Source/Resources.cpp Headers/Resources.h Headers/TriangleGraphicsResource.h Headers/RectGraphicsResource.h Headers/CircleGraphicsResource.h Headers/SpriteGraphicsResource.h Headers/ComponentType.h Headers/IEvent.h Headers/EventType.h Headers/PlayerMoveTransform.h Headers/ComponentSpec.h)
